--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           --Kodular platformu üzerinden Android mobil uygulamalar geliştirdim.<br><br>
           --21 Temmuz-5 Ağustos 2017 tarihleri arasında Abant İzzet Baysal Üniversitesi'nde düzenlenen Linux Yaz Kampı'nın Linux Sistem Yönetimi(1.düzey) kursuna katıldım.<br><br>
           --Temmuz-Ağustos 2018 tarihlerinde Samsun Atakum Belediyesi'nin Bilgi İşlem biriminde 30 iş günü zorunlu stajımı yaptım.<br><br>
-          --Web tasarımı ve uygulamaları geliştirmek, mobil uygulamaları geliştirmek, yazılım alanında kendimi geliştirmek istiyorum.<br><br>
+          --Web tasarımı ve uygulamaları geliştirmek, yazılım alanında kendimi geliştirmek istiyorum.<br><br>
         </p>
       </div>
     </div>
@@ -335,6 +335,10 @@
   <br>
   <a href="Sertifikalar/Click4Career_Teknoloji_Gunu.pdf" class="btn btn-outline-info btn-block">
     Click4Career Teknoloji Günü -- Tofaş
+  </a>
+  <br>
+  <a href="Sertifikalar/HTML5_ile_Web_Gelistirme_Certificate.pdf" class="btn btn-outline-info btn-block">
+    HTML5 ile Web Geliştirme -- BTK Akademi
   </a>
   <br>
   <a href="Sertifikalar/Kablosuz_Aglara_Giris_WiFi20.pdf" type="button" class="btn btn-outline-danger btn-block">
